--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </div>
                 <div id="yt_tracks">
                 <script src="https://apis.google.com/js/platform.js"></script>
-                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=eqe0N-ohToY&list=PLd9y5J6QFrDaqxIEI2PzRLrxlnIcz3UOV">Videos where my music appears</a></pl></br>
+                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=eqe0N-ohToY&list=PLd9y5J6QFrDaqxIEI2PzRLrxlnIcz3UOV">Featuring Channels</a></pl></br>
                   <pl></pl><iframe width="250" height="141" scrolling="no" src="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDaqxIEI2PzRLrxlnIcz3UOV" frameborder="no" allow="autoplay; encrypted-media" allowfullscreen></iframe></pl>
                   </br></br>
                   <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=_qiQqMCPhj8&list=PLd9y5J6QFrDbQBAitaIDSoBwDjQTdjsmd">Playlist 2019</a></pl></br>
