--- a/index.html
+++ b/index.html
@@ -239,25 +239,9 @@
         <header class="major">
           <div class="container">
           <h2>Biography</h2>
-          <p style="text-align:left">🔷Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama 🇵🇦 in June 1998. He uses FL Studio for his music production. 
+          <p style="text-align:left">Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama 🇵🇦 in June 1998. He uses FL Studio for his music production. 
 </br></br>
-🔷Significant Life Events:
-</br>
- ⬜️ 2012, Started making reggae, hip-hop tracks just for fun.
-</br>
- ⬜️ 2014, he decided to start making 'Electro House' music, in the 'Big Room' subgenre under the alias "Bayza", that is a variation of his maternal surname 'Baysa'.
-</br>
-&nbsp;&nbsp;&nbsp;&nbsp;• In March, he self-released his first track on SoundCloud: "Blast Off".
-</br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;• In June, he signed and released with "Cube Cherry Records" his firsts tracks on Spotify: Collapse (June), Unleashe (July) and some more.
-</br>
- ⬜️ 2016, in August he self-released a track for first time on Spotify: 'Audio Killer'.
-</br>
- ⬜️ 2018, he inclined his interests in the music production of his tracks toward the genres Melbourne Bounce/Psytrance. He signed with 'Nelation' and first released: 'Convergence' (April).
-</br>
- ⬜️ 2019, in September he self-released his first album: 'Genuine', it contains 13 tracks and most of them are Deep House
-</br></br>
-🔹During his career, he has been adopting genres such as Hardstyle, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes. </p>
+During his career, he has been adopting genres such as Hardstyle, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes. </p>
           </div>
         </header>
       </section>
