--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section id="music" class="wrapper style1">
         <header class="major">
           <h2>Music</h2>
-          <p>Follow me to listen to my last tracks</p>
+          <p>Follow me to listen to my latest tracks</p>
         </header>
         <div class="container">
           <div class="row">
@@ -240,8 +240,8 @@
           <div class="container">
           <h2>Biography</h2>
           <p style="text-align:left">Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama 🇵🇦 in June 1998. He uses FL Studio for his music production. 
-</br></br>
-During his career, he has been adopting genres such as Hardstyle, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes. </p>
+          </br></br>
+          During his career, he has been adopting genres such as Hardstyle, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes. </p>
           </div>
         </header>
       </section>
