--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <h2>Biography</h2>
           <p style="text-align:left">Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama 🇵🇦 in June 1998. He uses FL Studio for his music production. 
           </br></br>
-          During his career, he has been adopting genres such as Hardstyle, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes. </p>
+          During his career, he has been adopting genres such as Electro House, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes. </p>
           </div>
         </header>
       </section>
