--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script>
-    <script src="https://use.fontawesome.com/198e53835f.js"></script>
+    <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
     
     <!-- Google Knowledge Graph -->
     <script type="application/ld+json">
@@ -92,7 +92,7 @@
             <div class="4u">
               <section class="special box" style="
   background-color: #1d1d1d;">
-                 <a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw" title="Bayza's Spotify"><i class="icon fa-spotify spotify"></i></a>
+                 <a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw" title="Bayza's Spotify"><i class="icon fab fa-spotify spotify"></i></a>
                 <h3>Spotify</h3>
                 <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:0UFz5jBFwlNKaq1JwESYnX&size=detail&theme=dark" width="300" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe><br/>
                 <script>
@@ -158,7 +158,7 @@
             </div>
             <div class="4u">
               <section class="special box">
-                <a target="_blank" href="https://soundcloud.com/bayza" title="Bayza's SoundCloud"><i class="icon fa-soundcloud soundcloud"></i></a>
+                <a target="_blank" href="https://soundcloud.com/bayza" title="Bayza's SoundCloud"><i class="icon fab fa-soundcloud soundcloud"></i></a>
                 <h3>Soundcloud</h3>
                 
                 <script>
@@ -189,7 +189,7 @@
             </div>
             <div class="4u">
               <section class="special box">
-                <a target="_blank" href="https://youtube.com/bayza" title="Bayza's YouTube"><i class="icon fa-youtube-play youtube"></i></a>
+                <a target="_blank" href="https://youtube.com/bayza" title="Bayza's YouTube"><i class="icon fab fa-youtube youtube"></i></a>
                 <h3>YouTube</h3>
                 <div class="g-ytsubscribe" data-channel="djBayza" data-layout="full" data-theme="dark" data-count="default"></div>
                 <script>
@@ -276,12 +276,24 @@
             <div id="contact" class="6u">
               <h2>Contact</h2>
               <ul class="icons">
-                <li class="spotify"><a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" class="icon fa-spotify"><span class="label">Spotify</span></a></li>
-                <li class="soundcloud"><a target="_blank" href="https://soundcloud.com/bayza" class="icon fa-soundcloud"><span class="label">Soundcloud</span></a></li>
-                <li class="youtube"><a target="_blank" href="https://youtube.com/bayza" class="icon fa-youtube-play"><span class="label">Youtube</span></a></li>
-                <li class="twitter"><a target="_blank" href="https://twitter.com/bayzamusic" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li class="facebook"><a target="_blank" href="https://facebook.com/bayzamusic" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li class="instagram"><a target="_blank" href="https://www.instagram.com/bayzamusic" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                <li class="spotify">
+                  <a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX"><i class="icon fab fa-spotify"></i></a>
+                </li>
+                <li class="soundcloud">
+                  <a target="_blank" href="https://soundcloud.com/bayza"><i class="icon fab fa-soundcloud"></i></a>
+                </li>
+                <li class="youtube">
+                  <a target="_blank" href="https://youtube.com/bayza"><i class="icon fab fa-youtube"></i></a>
+                </li>
+                <li class="twitter">
+                  <a target="_blank" href="https://twitter.com/bayzamusic"><i class="icon fab fa-twitter"></i></a>
+                </li>
+                <li class="facebook">
+                  <a target="_blank" href="https://facebook.com/bayzamusic"><i class="icon fab fa-facebook"></i></a>
+                </li>
+                <li class="instagram">
+                  <a target="_blank" href="https://www.instagram.com/bayzamusic"><i class="icon fab fa-instagram"></i></a>
+                </li>
               </ul>
               <p>Email: <a href="mailto:info@bayzamusic.com">info@bayzamusic.com</a></p>
             </div>
