--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="robots" content="index,follow" />
-    <meta name="keywords" content="Bayza, Big Room, Bounce, Panama, Music" />
+    <meta name="keywords" content="Bayza, Big Room, Bounce, Panama, Music, EDM, Dance, Deep House, Oriental" />
     <meta name="description" content="Bayza is a Panamanian musician and producer."/>
     
     <!-- Protocolo Open Graph -->
