--- a/music.html
+++ b/music.html
@@ -51,4 +51,22 @@
         }
     </script>
 </head>
-    
+
+<body id="top">
+    <!-- Cabecera -->
+      <header id="header" class="skel-layers-fixed">
+        <h1>
+            <a target="_blank" title="Bayza's Spotify" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw"><img style="max-height: 100%;vertical-align:top;" src="/images/bayza_spotify_artist.png" alt="Bayza Spotify Code" ></a>
+            <a style="vertical-align: bottom;padding-left: 13px;" href="/"><i style="color:#b8b8b8" class="icon-bayza"></i></a>
+        </h1>
+        <nav id="nav">
+          <ul>
+            <li><a href="#top">Home</a></li>
+            <li><a href="#music">Music</a></li>
+            <li><a href="#bio">Biography</a></li>
+            <li><a href="#contact" class="button special">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+      
+</body>
