--- a/music.html
+++ b/music.html
@@ -50,10 +50,10 @@
     </h1>
     <nav id="nav">
       <ul>
-      <li><a href="bayzamusic.com">Home</a></li>
-      <li><a href="bayzamusic.com/music">Music</a></li>
-      <li><a href="bayzamusic.com/#bio">Biography</a></li>
-      <li><a href="#contact" class="button special">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="music">Music</a></li>
+      <li><a href="index.html/#bio">Biography</a></li>
+      <li><a href="index.html/#contact" class="button special">Contact</a></li>
       </ul>
     </nav>
     </header>
