--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </h1>
         <nav id="nav">
           <ul>
-            <li><a href="#top">Home</a></li>
+            <li><a href="#top" class="active">Home</a></li>
             <li><a href="#music">Music</a></li>
             <li><a href="#bio">Biography</a></li>
             <li><a href="#contact" class="button special">Contact</a></li>
