--- a/music.html
+++ b/music.html
@@ -51,7 +51,7 @@
     <nav id="nav">
       <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="music">Music</a></li>
+      <li><a href="music" class="active">Music</a></li>
       <li><a href="/#bio">Biography</a></li>
       <li><a href="/#contact" class="button special">Contact</a></li>
       </ul>
