--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/fontello-codes.css">
     <link rel="stylesheet" href="css/fontello-embedded.css">  
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <script src="/js/jquery.min.js"></script>
     <script src="/js/skel.min.js"></script>
     <script src="/js/skel-layers.min.js"></script>
