--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script>
     <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     
     <!-- Google Knowledge Graph -->
     <script type="application/ld+json">
