--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             id="navcol-1">
             <ul class="nav navbar-nav ml-auto">
             <li class="nav-item" ><a class="nav-link active" href="#top">Home</a></li>
-            <li class="nav-item" ><a  href="#music">Music</a></li>
-            <li class="nav-item" ><a  href="#bio">Biography</a></li>
-            <li class="nav-item" ><a  href="#contact">Contact</a></li>
+            <li class="nav-item" ><a class="nav-link" href="#music">Music</a></li>
+            <li class="nav-item" ><a class="nav-link" href="#bio">Biography</a></li>
+            <li class="nav-item" ><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
