--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <body id="top">
     <!-- Cabecera -->
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-      <div class="container"><a style="color:#b8b8b8;" class="icon-bayza" href="#"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+      <div class="container"><a style="color:#b8b8b8; font-size:1.5rem;" class="icon-bayza" href="#"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse"
             id="navcol-1">
             <ul class="nav navbar-nav ml-auto">
