--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <!-- Recursos -->
     <link rel="shortcut icon" href="/images/logomt.jpg"/>
     <link rel="canonical" href="https://bayzamusic.com"/>
+    <link rel="stylesheet" href="/css/bootstrap.min-for-header.css"/>
     <link rel="stylesheet" type="text/css" href="/css/skel.css"/>
     <link rel="stylesheet" type="text/css" href="/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="/css/style-xlarge.css"/>
-
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/fontello-codes.css">
     <link rel="stylesheet" href="css/fontello-embedded.css">  
