--- a/index.html
+++ b/index.html
@@ -217,19 +217,19 @@
                 </div>
                 <div id="yt_tracks">
                 <script src="https://apis.google.com/js/platform.js"></script>
-                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=eqe0N-ohToY&list=PLd9y5J6QFrDaqxIEI2PzRLrxlnIcz3UOV">Featuring Channels</a></pl></br>
+                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=eqe0N-ohToY&list=PLd9y5J6QFrDaqxIEI2PzRLrxlnIcz3UOV">Featuring Channels</a></pl>
                   <pl></pl><iframe width="250" height="141" scrolling="no" src="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDaqxIEI2PzRLrxlnIcz3UOV" frameborder="no" allow="autoplay; encrypted-media" allowfullscreen></iframe></pl>
-                  </br></br>
-                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDZMr6UQqdNelkRv6mINlsQ4">Playlist 2020</a></pl></br>
+                  <br/>
+                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDZMr6UQqdNelkRv6mINlsQ4">Playlist 2020</a></pl><br/>
                   <pl></pl><iframe width="250" height="141" scrolling="no" src="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDZMr6UQqdNelkRv6mINlsQ4" frameborder="no" allow="autoplay; encrypted-media" allowfullscreen></iframe></pl>
-                  <br></br>
-                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDbQBAitaIDSoBwDjQTdjsmd">Playlist 2019</a></pl></br>
+                  <br/>
+                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDbQBAitaIDSoBwDjQTdjsmd">Playlist 2019</a></pl><br/>
                   <pl></pl><iframe width="250" height="141" scrolling="no" src="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDbQBAitaIDSoBwDjQTdjsmd" frameborder="no" allow="autoplay; encrypted-media" allowfullscreen></iframe></pl>
-                  <br></br>
-                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=8t4YBIYjIJQ&list=PLd9y5J6QFrDaaq2qsQlp2Cy-3fkuuXo6q">Playlist 2018</a></pl></br>
+                  <br/>
+                  <pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/watch?v=8t4YBIYjIJQ&list=PLd9y5J6QFrDaaq2qsQlp2Cy-3fkuuXo6q">Playlist 2018</a></pl><br/>
                   <pl></pl><iframe width="250" height="141" scrolling="no" src="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDaaq2qsQlp2Cy-3fkuuXo6q" frameborder="no" allow="autoplay; encrypted-media" allowfullscreen></iframe></pl>
-                  <br></br>
-                  <pl></pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/playlist?list=PLd9y5J6QFrDbwNsrrZunKSbUl419Lly3i">Playlist 2017</a></pl></br>
+                  <br/>
+                  <pl></pl><a style="text-decoration:none" target="_blank" href="https://www.youtube.com/playlist?list=PLd9y5J6QFrDbwNsrrZunKSbUl419Lly3i">Playlist 2017</a></pl><br/>
                   <iframe width="250" height="141" scrolling="no" src="https://www.youtube.com/embed/videoseries?list=PLd9y5J6QFrDbwNsrrZunKSbUl419Lly3i" frameborder="no" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
               </section>
