--- a/music.html
+++ b/music.html
@@ -43,19 +43,18 @@
 
 <body id="top">
   <!-- Cabecera -->
-    <header id="header" class="skel-layers-fixed">
-    <h1>
-      <a target="_blank" title="Bayza's Spotify" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw"><img style="max-height: 100%;vertical-align:top;" src="/images/bayza_spotify_artist.png" alt="Bayza Spotify Code" ></a>
-      <a style="vertical-align: bottom;padding-left: 13px;" href="/"><i style="color:#b8b8b8" class="icon-bayza"></i></a>
-    </h1>
-    <nav id="nav">
-      <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="music" class="active">Music</a></li>
-      <li><a href="/#bio">Biography</a></li>
-      <li><a href="/#contact" class="button special">Contact</a></li>
-      </ul>
-    </nav>
-    </header>
+  <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
+    <div class="container"><a style="color:#b8b8b8; font-size:1.5rem;" class="icon-bayza" href="#"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse"
+          id="navcol-1">
+          <ul class="nav navbar-nav ml-auto">
+          <li class="nav-item" ><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item" ><a class="nav-link active" href="music">Music</a></li>
+          <li class="nav-item" ><a class="nav-link" href="/#bio">Biography</a></li>
+          <li class="nav-item" ><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 </body>
