--- a/music.html
+++ b/music.html
@@ -28,17 +28,22 @@
   <!-- Recursos -->
   <link rel="shortcut icon" href="/images/logomt.jpg"/>
   <link rel="canonical" href="https://bayzamusic.com"/>
+  <link rel="stylesheet" href="/css/bootstrap.min-for-header.css"/>
   <link rel="stylesheet" type="text/css" href="/css/skel.css"/>
   <link rel="stylesheet" type="text/css" href="/css/style.css"/>
   <link rel="stylesheet" type="text/css" href="/css/style-xlarge.css"/>
   <link rel="stylesheet" href="css/fontello.css">
   <link rel="stylesheet" href="css/fontello-codes.css">
-  <link rel="stylesheet" href="css/fontello-embedded.css">
+  <link rel="stylesheet" href="css/fontello-embedded.css">  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
   <script src="/js/jquery.min.js"></script>
   <script src="/js/skel.min.js"></script>
   <script src="/js/skel-layers.min.js"></script>
   <script src="/js/init.js"></script>
   <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
 </head>
 
 <body id="top">
