--- a/index-test.html
+++ b/index-test.html
@@ -90,7 +90,7 @@
       </div>
     </section>
     <script src="https://apis.google.com/js/platform.js"></script>
-
+    <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
   </body>
