--- a/index-test.html
+++ b/index-test.html
@@ -1,5 +1,8 @@
 <html>
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="index,follow" />
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/fontello-embedded.css">
     <link rel="stylesheet" href="css/bayza.css"/>
@@ -48,51 +51,38 @@
         <h4 class="font-weight-light">Follow me to listen to my latest tracks</h4>
         <div class="row text-white">
           <div class="col-lg-4">
-            <div class="m-3 bg-darkest rounded-lg">
-              <div class="panel py-2">
+            <div class="m-3 bg-darkest rounded-lg py-3">
+              <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw" title="Bayza's Spotify">
                   <i class="icon fab fa-spotify spotify rounded-circle border border-white" aria-hidden="true"></i>
                 </a>
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">Spotify</h5>
               <div>
-                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:0UFz5jBFwlNKaq1JwESYnX&size=detail&theme=dark" width="210" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
+                <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:0UFz5jBFwlNKaq1JwESYnX&size=detail&theme=dark" width="210" height="56"></iframe>
               </div>
               <br/>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="m-3 bg-darkest rounded-lg">
-              <div class="panel py-2">
+            <div class="m-3 bg-darkest rounded-lg py-3">
+              <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://soundcloud.com/bayza" title="Bayza's SoundCloud">
                   <i class="icon fab fa-soundcloud soundcloud rounded-circle border border-white" aria-hidden="true"></i>
                 </a>
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">SoundCloud</h5>
-              <script>
-                $(document).ready(function(){
-                  $("#toggle_0").click(function(){
-                    $("#soundcloud_tracks").slideToggle("slow");
-                  });
-                });
-                var htmlString1 = '<p onclick="hide();"><a type="button" class="btn btn-outline-soundcloud px-4 py-1"><h5 class="font-weight-sc m-0">Hide Tracks</h5></a>';
-                var htmlString2 = '<p onclick="show();"><a type="button" class="btn btn-outline-soundcloud px-4 py-1"><h5 class="font-weight-sc m-0">Hide Tracks</h5></a>';
-                function show(){
-                    document.getElementById("toggle_0").innerHTML= htmlString1;
-                }
-                function hide(){
-                    document.getElementById("toggle_0").innerHTML= htmlString2;
-                }
-              </script>
-              <div id="soundcloud_tracks">
-                <p onclick="show();"><iframe width="85%" height="500" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/38787166&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=true&show_teaser=true&visual=false"></iframe>
-                </p>
+              <div id="button1">
+                <button  type="button" class="btn btn-outline-soundcloud px-4 py-1" onClick="show()";><h5 class="font-weight-sc m-0">Show Tracks</h5></button>
+              </div>
+              <div id="soundcloud_tracks" class="mt-2">
+                <iframe width="85%" height="500" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/38787166&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=true&show_teaser=true&visual=false"></iframe>
               </div>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="m-3 bg-darkest rounded-lg">
-              <div class="panel py-2">
+            <div class="m-3 bg-darkest rounded-lg py-3">
+              <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://youtube.com/bayza" title="Bayza's YouTube">
                   <i class="icon fab fa-youtube youtube rounded-circle border border-white" aria-hidden="true"></i>
                 </a>              
@@ -111,7 +101,22 @@
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/cc91b92ca8.js"></script>
+    <script>
+      $(document).ready(function(){
+        $("#button1").click(function(){
+          $("#soundcloud_tracks").slideToggle("slow");
+        });
+      });
+
+      function show(){
+          document.getElementById("button1").innerHTML= '<button  type="button" class="btn btn-outline-soundcloud px-4 py-1" onClick="hide()";><h5 class="font-weight-sc m-0">Hide Tracks</h5></button>';
+      }
+      function hide(){
+          document.getElementById("button1").innerHTML= '<button  type="button" class="btn btn-outline-soundcloud px-4 py-1" onClick="show()";><h5 class="font-weight-sc m-0">Show Tracks</h5></button>';
+      }
+    </script>
   </body>
 </html>
