--- a/index-test.html
+++ b/index-test.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1">
-      <a class="navbar-brand pl-5" href="/"><i class="icon-bayza"></i></a>
+      <a class="navbar-brand" href="/"><i class="icon-bayza"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
