--- a/index-test.html
+++ b/index-test.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="#">Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Biography</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Contact</a>
@@ -96,6 +96,20 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="bg-darkest text-secondary text-center py-5">
+      <div class="container">
+        <h3 class="mt-3 text-uppercase text-white">About</h3>
+        <div class="my-3 font-weight-light text-justify">
+        <p>
+          Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama 🇵🇦 in June 1998. He uses FL Studio for his music production.
+        </p>
+        <p>
+          During his career, he has been adopting genres such as Electro House, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes.
+        </p>
+      </div>
       </div>
     </section>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
