--- a/index-test.html
+++ b/index-test.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/fontello-embedded.css">
     <link rel="stylesheet" href="css/bayza.css"/>
+    <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark px-5 py-1">
@@ -104,7 +105,7 @@
         <h3 class="mt-3 text-uppercase text-white">About</h3>
         <div class="my-3 font-weight-light text-justify">
         <p>
-          Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama 🇵🇦 in June 1998. He uses FL Studio for his music production.
+          Ahmed Rangel, also known as 'Bayza'; was born and raised in La Chorrera, Panama <i class="em em-flag-pa" aria-role="presentation" aria-label="Panama Flag"></i> in June 1998. He uses FL Studio for his music production.
         </p>
         <p>
           During his career, he has been adopting genres such as Electro House, Trap, Dubstep, Melbourne Bounce, Minimal, Trance, Psytrance, Deep House and some Oriental vibes.
