--- a/index-test.html
+++ b/index-test.html
@@ -55,7 +55,7 @@
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX?si=v8o8YvcnTQOEjbBcEQuxKw" title="Bayza's Spotify">
-                  <i class="icon fab fa-spotify spotify rounded-circle border border-white" aria-hidden="true"></i>
+                  <i class="icon_card fab fa-spotify spotify_card rounded-circle border border-white" aria-hidden="true"></i>
                 </a>
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">Spotify</h5>
@@ -69,7 +69,7 @@
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://soundcloud.com/bayza" title="Bayza's SoundCloud">
-                  <i class="icon fab fa-soundcloud soundcloud rounded-circle border border-white" aria-hidden="true"></i>
+                  <i class="icon_card fab fa-soundcloud soundcloud_card rounded-circle border border-white" aria-hidden="true"></i>
                 </a>
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">SoundCloud</h5>
@@ -85,7 +85,7 @@
             <div class="m-3 bg-darkest rounded-lg py-3">
               <div class="panel pb-2">
                 <a class="text-white" target="_blank" href="https://youtube.com/bayza" title="Bayza's YouTube">
-                  <i class="icon fab fa-youtube youtube rounded-circle border border-white" aria-hidden="true"></i>
+                  <i class="icon_card fab fa-youtube youtube_card rounded-circle border border-white" aria-hidden="true"></i>
                 </a>              
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">YouTube</h5>
@@ -113,6 +113,67 @@
       </div>
       </div>
     </section>
+
+    <footer class="page-footer bg-dark text-white text-left font-weight-light">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-md-3 ">
+            <h4>Stream Music</h4>
+            <ul class="alt">
+              <li><a target="_blank" href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX">Spotify</a></li>
+              <li><a target="_blank" href="https://soundcloud.com/bayza">SoundCloud</a></li>
+              <li><a target="_blank" href="https://youtube.com/bayza">Youtube</a></li>
+              <li><a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?mt=1&amp;app=music">Apple Music</a></li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h4>Buy Music</h4>
+            <ul class="alt">
+              <li>
+                <a target="_blank" href="https://geo.itunes.apple.com/us/artist/bayza/882647839?app=itunes">iTunes</a>
+              </li>
+              <li>
+                <a target="_blank" href="https://bayza.bandcamp.com/">Bandcamp</a>
+              </li>
+              <li>
+                <a target="_blank" href="https://play.google.com/store/music/artist/Bayza?id=A267m6ooa7buyxpugsy6w7dopnu">Google Play Music</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h4>Contact</h4>
+            <ul class="icons mb-0">
+              <li class="spotify">
+                <a href="https://open.spotify.com/artist/0UFz5jBFwlNKaq1JwESYnX" target="_blank"><i class="icon fab fa-spotify" aria-hidden="true"></i></a>
+              </li>
+              <li class="soundcloud">
+                <a href="https://soundcloud.com/bayza" target="_blank"><i class="icon fab fa-soundcloud" aria-hidden="true"></i></a>
+              </li>
+              <li class="youtube">
+                <a href="https://youtube.com/bayza" target="_blank"><i class="icon fab fa-youtube" aria-hidden="true"></i></a>
+              </li>
+              <li class="twitter">
+                <a href="https://twitter.com/bayzamusic" target="_blank"><i class="icon fab fa-twitter" aria-hidden="true"></i></a>
+              </li>
+              <li class="facebook">
+                <a href="https://facebook.com/bayzamusic" target="_blank"><i class="icon fab fa-facebook" aria-hidden="true"></i></a>
+              </li>
+              <li class="instagram">
+                <a href="https://instagram.com/bayzamusic" target="_blank"><i class="icon fab fa-instagram" aria-hidden="true"></i></a>
+              </li>
+            </ul>
+            <ul class="contact">
+              <li>
+                <span class="ml-2">Email: </span><a class="mx-0" href="mailto:info@bayzamusic.com" target="_blank">info@bayzamusic.com</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-12 text-center mt-2 text-small">
+            <p>© Bayza. All rights reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="https://connect.soundcloud.com/sdk/sdk-3.3.0.js"></script>
     <script src="https://apis.google.com/js/platform.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
