--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary"/>
-    <meta property="twitter:title" content="Bayza"/>
+    <meta name="twitter:title" content="Bayza"/>
     <meta name="twitter:description" content="Bayza is a Panamanian musician and producer."/>
     <meta name="twitter:image" content="https://bayzamusic.com/images/logomt.jpg"/>
     <meta name="twitter:site" content="@bayzamusic"/>
