--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Music</a>
+          <a class="nav-link" href="/#music">Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="/#contact">Contact</a>
         </li>        
         </ul>
       </div>  
@@ -104,7 +104,7 @@
       </div>
     </section>
 
-    <section class="bg-dark text-secondary text-center py-5">
+    <section id="music" class="bg-dark text-secondary text-center py-5">
       <div class="container">
         <h3 class="mt-3 text-uppercase text-white">Music</h3>
         <h4 class="font-weight-light">Follow me to listen to my latest tracks</h4>
@@ -158,7 +158,7 @@
       </div>
     </section>
 
-    <section class="bg-darkest text-secondary text-center py-5">
+    <section id="about" class="bg-darkest text-secondary text-center py-5">
       <div class="container">
         <h3 class="mt-3 text-uppercase text-white">About</h3>
         <div class="my-3 font-weight-light text-justify">
@@ -172,7 +172,7 @@
       </div>
     </section>
 
-    <footer class="page-footer bg-dark text-white text-left font-weight-light">
+    <footer id="contact" class="page-footer bg-dark text-white text-left font-weight-light">
       <div class="container py-5">
         <div class="row">
           <div class="col-md-3 ">
