--- a/index.html
+++ b/index.html
@@ -96,12 +96,18 @@
       <div class="container py-5 my-5">
         <h1 class="display-4 mt-3 text-uppercase">Bayza</h1>
         <h4 class="my-3 font-weight-light">Panamanian musician and producer</h4>
-        <div class="row justify-content-center mb-3">
-          <div class="col-12 col-lg-2 mb-2">
-            <a href="#music" type="button" class="btn btn-outline-dark px-5 py-2"><h5 class="font-weight-light m-0 text-uppercase">Music</h5></a>
-          </div>
-          <div class="col-12 col-lg-2 mb-2">
-            <a href="#contact" type="button" class="btn btn-outline-dark px-5 py-2"><h5 class="font-weight-light m-0 text-uppercase">Contact</h5></a>
+        <div class="row">
+          <div class="col-12 mb-2 justify-content-center">
+            <span>
+              <a href="#music" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
+                <h5 class="font-weight-light m-0 text-uppercase">Music</h5>
+              </a>
+            </span>
+            <span>
+              <a href="#contact" type="button" class="btn btn-outline-dark px-5 py-2 mb-2">
+                <h5 class="font-weight-light m-0 text-uppercase">Contact</h5>
+              </a>
+            </span>
           </div>
         </div>
       </div>
