--- a/releases.html
+++ b/releases.html
@@ -52,10 +52,44 @@
           <a class="nav-link" href="/#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/#contact">Contact</a>
+          <a class="nav-link" href="/releases/#contact">Contact</a>
         </li>        
         </ul>
       </div>  
     </nav>
+    <section id="releases" class="bg-darkest">
+      <div class="container text-secondary text-center py-5">
+        <h3 class="mt-3 text-uppercase text-white">Releases</h3>
+        <h4 class="font-weight-light">by year</h4>
+        <div class="row my-4">
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2020">
+                  <img src="https://bayzamusic.com/images/2020bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
+                </a>
+                <a href="/releases/2020">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2020</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small> 
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-4">
+            <div class="item">
+              <div class="cover">
+                <a href="/releases/2019">
+                  <img src="https://bayzamusic.com/images/2019bayzacom.jpg" alt="Bayza 2019" width="300" height="300">
+                </a>
+                <a href="/releases/2019">
+                  <h5 class="mb-0"><small><p class="mb-0 mt-2">2019</p></small></h5>
+                  <small><p class="mb-4">Bayza</p></small> 
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
