--- a/releases.html
+++ b/releases.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/fontello-embedded.css">
     <link rel="stylesheet" href="css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases"/>
   </head>
 
   </body>
