--- a/releases.html
+++ b/releases.html
@@ -9,7 +9,7 @@
     <meta name="description" content="All releases."/>
     
     <!-- Protocolo Open Graph -->
-    <meta property="og:secure_url" content="http://bayzamusic.com"/>
+    <meta property="og:secure_url" content="http://bayzamusic.com/releases">
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza Music Releases"/>
     <meta property="og:site_name" content="Bayza"/>
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="css/fontello-embedded.css">
     <link rel="stylesheet" href="css/bayza.css"/>
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
-    <link rel="canonical" href="https://bayzamusic.com/"/>
+    <link rel="canonical" href="https://bayzamusic.com/releases"/>
   </head>
 
   </body>
