--- a/releases.html
+++ b/releases.html
@@ -9,7 +9,7 @@
     <meta name="description" content="All releases."/>
     
     <!-- Protocolo Open Graph -->
-    <meta property="og:secure_url" content="http://bayzamusic.com/releases">
+    <meta property="og:secure_url" content="http://bayzamusic.com/releases"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Bayza Music Releases"/>
     <meta property="og:site_name" content="Bayza"/>
