--- a/releases/2020.html
+++ b/releases/2020.html
@@ -60,7 +60,7 @@
     <section id="releases" class="bg-darkest">
       <div class="container text-secondary text-center py-5">
         <h3 class="mt-3 text-uppercase text-white">Releases</h3>
-        <h4 class="font-weight-light">by year</h4>
+        <h4 class="font-weight-light">2020</h4>
         <div class="row my-4">
           <div class="col-12 col-lg-4">
             <div class="item">
