--- a/index.html
+++ b/index.html
@@ -130,8 +130,10 @@
                 <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:0UFz5jBFwlNKaq1JwESYnX&size=detail&theme=dark" width="210" height="56"></iframe>
               </div>
               <br/>
-              <div id="button1">
-                <button  type="button" class="btn btn-outline-spotify px-4 py-1" onClick="show1()";><h5 class="text-secondary font-weight-normal m-0">Top Tracks</h5></button>
+              <div>
+                <span id="button1">
+                <button type="button" class="btn btn-outline-spotify px-4 py-1" onClick="show1()";><h5 class="text-secondary font-weight-normal m-0">Top Tracks</h5></button>
+                </span>
               </div>
               <div id="spotify_tracks" class="mt-2">
                 <iframe src="https://open.spotify.com/embed/artist/0UFz5jBFwlNKaq1JwESYnX" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
@@ -146,8 +148,10 @@
                 </a>
               </div>
               <h5 class="mt-3 text-uppercase font-weight-light">SoundCloud</h5>
-              <div id="button2">
-                <button  type="button" class="btn btn-outline-soundcloud px-4 py-1" onClick="show2()";><h5 class="text-secondary font-weight-normal m-0">Tracks</h5></button>
+              <div>
+                <span id="button2">
+                <button type="button" class="btn btn-outline-soundcloud px-4 py-1" onClick="show2()";><h5 class="text-secondary font-weight-normal m-0">Tracks</h5></button>
+                </span>
               </div>
               <div id="soundcloud_tracks" class="mt-2">
                 <iframe width="95%" height="500" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/38787166&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=true&show_teaser=true&visual=false"></iframe>
@@ -167,8 +171,10 @@
                 </div>
               </div>
               <br/>
-              <div id="button3">
+              <div>
+                <span id="button3">
                 <button  type="button" class="btn btn-outline-youtube px-4 py-1" onClick="show3()";><h5 class="text-secondary font-weight-normal m-0">Uploads</h5></button>
+                </span>
               </div>
               <div id="youtube_videos" class="mt-2">
                 <iframe width="300" height="169" src="https://www.youtube.com/embed/videoseries?list=UUl4DogCwQJKLh_dmYbfk9Mg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
