--- a/releases/2020.html
+++ b/releases/2020.html
@@ -49,6 +49,9 @@
           <a class="nav-link" href="/#music">Music</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/releases">Releases</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/#about">About</a>
         </li>
         <li class="nav-item">
