--- a/releases/2020.html
+++ b/releases/2020.html
@@ -55,7 +55,7 @@
           <a class="nav-link" href="/#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link" href="/#contact">Contact</a>
         </li>        
         </ul>
       </div>  
